# py-sc-fermi

./: .coverage.rc  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  Citation.CFF  LICENSE  README.md  changes.md  lcov.info  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish-to-pypi.yml
cli/: sc_fermi_solve.py
docs/: conf.py  index.rst  requirements.txt  tutorial.ipynb  usage_notes.rst
docs/source/: FAQs.rst  cli_tutorial.rst  conf.py  dos.csv  index.rst  installation.rst  modules.rst  py_sc_fermi.rst  requirements.txt  tutorial.ipynb  tutorials.rst  usage_notes.rst
examples/: LiF_mp-1138_conventional_standard.cif  POSCAR  calculation_setup.ipynb  example_workflow.ipynb  frozen py-sc-fermi test.ipynb  out.txt  py-sc-fermi example.ipynb
examples/alex_imperial_low_T/: comparison.ipynb
examples/auto_examples/: Untitled-Copy1.ipynb  Untitled.ipynb  auto_functions.py  automator_config.yaml  checking_fermi.ipynb  compare_methods-checkpoint.ipynb  compare_methods.ipynb  defects.yaml  elements.yaml  frozen-sc-fermi  interest.yaml  method_comparison-new.ipynb  method_comparison-old.ipynb  sc-fermi  sc_pyper_functions.py  shush  your_mum
examples/frozen_sc_fermi_example/: frozen py-sc-fermi test.ipynb
examples/host/: INCAR  KPOINTS  POSCAR  POTCAR
examples/sc_fermi_example/: py-sc-fermi example.ipynb
examples/spin_pol_example/: Untitled.ipynb  comparison.ipynb
examples/v_F/: INCAR  KPOINTS
examples/v_Li/: INCAR  POSCAR
paper/: paper.bib  paper.md
py_sc_fermi/: .defect_charge_state.py.swp  Untitled.ipynb  __init__.py  cli.py  constants.py  defect_charge_state.py  defect_species.py  defect_system.py  dos.py  inputs.py  warnings.py
tests/: test_defect_charge_state.py  test_defect_species.py  test_defect_system.py  test_dos.py  test_inputs.py  test_warnings.py
(+22 files in other folders)
